@@ -4,6 +4,7 @@
   support them anymore.
 - Bugfix: Do not run out of memory when escaping very large strings.
 - Bugfix: Minimise the interference from the hosting CMS styles.
+- Bugfix: Missing hidden property support for DatetimeImmutable.
 
 5.0.9
 - Bugfix: Add the missing "kreXX Messages" to the translation.
